GitVersion1/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>B2C</fullName>
                </value>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Dossche</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Line_Species__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cattle - Beef</fullName>
                </value>
                <value>
                    <fullName>Equine</fullName>
                </value>
                <value>
                    <fullName>Fish</fullName>
                </value>
                <value>
                    <fullName>Game Animals</fullName>
                </value>
                <value>
                    <fullName>Layers</fullName>
                </value>
                <value>
                    <fullName>Meat Poultry</fullName>
                </value>
                <value>
                    <fullName>Multi-Species</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other - Aqua</fullName>
                </value>
                <value>
                    <fullName>Pet Food</fullName>
                </value>
                <value>
                    <fullName>Piglets</fullName>
                </value>
                <value>
                    <fullName>Rabbit</fullName>
                </value>
                <value>
                    <fullName>Shrimp</fullName>
                </value>
                <value>
                    <fullName>Small Ruminants</fullName>
                </value>
                <value>
                    <fullName>Sows &amp; Hogs</fullName>
                </value>
                <value>
                    <fullName>Cattle - Dairy</fullName>
                </value>
                <value>
                    <fullName>Common Wheat</fullName>
                </value>
                <value>
                    <fullName>Rye</fullName>
                </value>
                <value>
                    <fullName>Durum Wheat</fullName>
                </value>
                <value>
                    <fullName>Other NHM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line_Species__c</fullName>
        <label>Product Line (Species)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pork</fullName>
                </value>
                <value>
                    <fullName>Poultry</fullName>
                </value>
                <value>
                    <fullName>Ruminants</fullName>
                </value>
                <value>
                    <fullName>Other Species</fullName>
                </value>
                <value>
                    <fullName>Multi - Species</fullName>
                </value>
                <value>
                    <fullName>Aquaculture</fullName>
                </value>
                <value>
                    <fullName>Leisure</fullName>
                </value>
                <value>
                    <fullName>Human</fullName>
                </value>
                <value>
                    <fullName>Non Feed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <description>If a content is related to a promotion, please select one from the list.</description>
        <inlineHelpText>To add a promotion to the list, please contact your Crescendo administrator.</inlineHelpText>
        <label>Promotion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Extender 2016.03 (Poland)</fullName>
                </value>
                <value>
                    <fullName>PF Favorit 2016.04.27</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>